tests/cases/fail/tuple_managed_class.p4
class Bucket:
    values: list[int]

def main() -> None:
    pair: (Bucket,int) = (Bucket([1, 2]), 3)
